# movies_api

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  _settings.py  conftest.py  constants.py  pyproject.toml  pytest.ini  requirements.txt
api/: api_manager.py  auth_api.py  movie_api.py  movies_api.py
asserters/: common_asserters.py  movies_asserters.py
core/: base_http_client.py  http_client.py
core/asserters/: common_asserters.py
core/db/sqlalchemy/: base_db_client.py
core/db/sqlalchemy/postgres/: pg_client.py
core/http/: base_http_client.py
core/http/requests/: http_client.py  logging.py
core/plugins/: allure_description_checker.py  xdist_logger.py
core/pydantic/annotations/: _validator.py  type.py
core/pydantic/models/: base_http_models.py  response_wrapper.py
core/utils/: fake.py
enums/auth/: endpoints.py  password_rules.py  roles.py  user_roles.py
enums/movie/: endpoints.py  locations.py
fixtures/: auth_fixtures.py  common_fixtures.py  movies_fixtures.py
fixtures/models/auth/: user_data.py
fixtures/models/common/: movie_data.py
fixtures/models/movies/: user_context.py
helpers/db/: movies_db_helper.py
models/api/: user.py
models/api/auth/: create_user.py  get_user_info.py  login_user.py  register_user.py
models/api/movies/: create_movie.py  delete_movie.py  get_genres_list.py  get_movies.py  patch_movie.py
models/api/movies/common/: genre.py  review.py
models/db/: genre.py  genre_schema.py  movie.py
tests/: conftest.py
tests/api/auth/: test_create_user.py  test_get_user.py  test_login.py  test_register.py
tests/api/movies/: test_create_movie.py  test_delete_movie.py  test_get_movies.py  test_path_movie.py
